@@ -56,7 +56,7 @@ public class GitHandler {
     private boolean isGitRepository() {
         // For some reason the solution from https://www.eclipse.org/lists/jgit-dev/msg01892.html does not work
         // This solution is quite simple but might not work in special cases, for us it should suffice.
-        return Files.exists(Paths.get(repositoryPath.toString(), ".git"));
+        return Files.exists(Path.of(repositoryPath.toString(), ".git"));
     }
 
     /**
